--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,34 +40,41 @@ body {
 #header {
 	display:block;
 	background-color: #000000;
-	height:70px;
-	margin:0px;
-	padding-top:6px;
-	position:static;
+	height:60px;
 }
 #logo {
-	margin:20px;
+	margin:10px;
 	float:left;
 	display:inline-block;
 	border-radius:10px;
 }
 #titlelogo {
-	margin:10px 20px 0px 0px;
+	margin-right:20px;
 	float:left;
 	display:inline-block;
 }
 .button {
 	display:inline-block;
 	position:relative;
-	width:110px;
-	height:54px;
+	width:80px;
+	height:60px;
 	background-color:#272727;
 	text-align:center;
 	cursor:pointer;
-	margin:16px 0px 0px 0px;
+	vertical-align: top;
 }
 .longbutton {
-	width:150px;
+	width:100px;
+}
+.doublebutton {
+	width:100px;
+}
+.button p {
+	margin-top:22px;
+	font-weight:bold;
+}
+.doublebutton p {
+	margin-top:12px;
 }
 .buttonhighlighted {
 	background-color:#6A6A6A;
@@ -75,6 +82,13 @@ body {
 }
 .bodyhighlight {
 	background-color:#6A6A6A;
+}
+.butSep {
+	height:60px;
+	width:2px;
+	display:inline-block;
+	vertical-align: top;
+	background-color:#3e3e3e;
 }
 #main {
 	font-family:Consolas, "Slabo 27px", "Courier New" ;
@@ -105,12 +119,13 @@ body {
 }
 #pagetitle {
 	display:inline-block;
-	height:40px;
+	height:45px;
 	width:100%;
-	padding-top:5px;
 }
-#pagetitle h1 {
-	margin:0px 0px 0px 82px;
+#pagetitle p {
+	margin:5px 0px 0px 82px;
+	font-size:2em;
+	font-weight:bold;
 }
 #side-container {
 	width:300px;
@@ -193,8 +208,8 @@ a:visited {
 	display:inline-block;
 	float:right;
 	position:relative;
-	margin-top:10px;
-	margin-right:30px;
+	margin-top:5px;
+	margin-right:10px;
 }
 .socialmedia {
 	background-color:#272727;
@@ -202,6 +217,7 @@ a:visited {
 	height:50px;
 	border-radius:5px;
 	display:inline-block;
+	margin-left:5px;
 }
 .socialmediahighlight {
 	background-color:#3395f0;
