--- a/stylesheet.css
+++ b/stylesheet.css
@@ -122,7 +122,7 @@ body {
 	height:45px;
 	width:100%;
 }
-#pagetitle p {
+#ptitle {
 	margin:5px 0px 0px 82px;
 	font-size:2em;
 	font-weight:bold;
