--- a/calculatorsheet.css
+++ b/calculatorsheet.css
@@ -22,11 +22,21 @@
 
 body {
   overflow:hidden;
-  font-family:'Ubuntu Mono', Consolas, "Courier New" ;
+  font-family:Consolas,"lucida console","Courier New" ;
+}
+
+#display {
+  position:relative;
+  overflow:auto;
+}
+
+.ps-scrollbar-x-rail, .ps-scrollbar-y-rail {
+  z-index:120;
 }
 
 textarea {
   border:none;
+  font-family:Consolas,"lucida console","Courier New" ;
 }
 
 .effect-Normal {
@@ -95,7 +105,7 @@ textarea {
   position:absolute;
   border:5px solid #383838;
   border-radius:3px;
-  z-index:30;
+  z-index:121;
 }
 
 .colourselect {
@@ -149,18 +159,35 @@ textarea {
   opacity:1;
 }
 
+#mctitle {
+  display:inline-block;
+  height:45px;
+  width:300px;
+  position:relative;
+}
+
+#mctitletop {
+  height:45px;
+  position:absolute;
+}
+
+#mctitlebottom {
+  height:45px;
+  position:absolute;
+}
+
 #pagetitle h1 {
   display:inline-block;
-  margin:5px 0px 0px 10px;
+  margin:1px 0px 0px 10px;
   vertical-align:top;
 }
 
 #credits {
   display:inline-block;
   font-style:italic;
-  margin:20px 0 0 10px;
+  margin:32px 0 0 10px;
   vertical-align:top;
-  font-size:13px;
+  font-size:10px;
 }
 
 #titlebarButtons {
@@ -192,11 +219,11 @@ textarea {
 }
 
 .tutorialbuttondefault {
-  background-color:#5092d7;
+  background-color:#497cff;
 }
 
 .tutorialbuttonhighlight {
-  background-color:#78c7ee;
+  background-color:#6993ff;
 }
 
 #tutorialicon {
@@ -206,6 +233,166 @@ textarea {
   background-image:url(assets/trajectory/tuticon.png);
   border-radius:5px;
   margin:6px 0px 6px 5px;
+}
+
+#hotkeyContainer {
+  height:45px;
+  width:100px;
+  display:inline-block;
+  background-color: #ed5c48;
+  position:relative;
+  vertical-align: top;
+  cursor:pointer;
+}
+
+#hotkeyContainerp {
+  text-align:center;
+  margin:0;
+  padding:12px 7px;
+  font-size:21px;
+}
+
+#hotkeys {
+  position:absolute;
+  top:45px;
+  left:-165px;
+  height:220px;
+  width:430px;
+  background-color:#ed5c48;
+  z-index:250;
+  border-radius:5px;
+  display:none;
+}
+
+.hkrow {
+  width:400px;
+  height:40px;
+  margin-left:10px;
+}
+
+#hk1strow {
+  margin-top:8px;
+}
+
+#hk2ndrow {
+  margin-left:20px;
+}
+
+#hk3rdrow {
+  margin-left:30px;
+}
+
+#hk4throw {
+  margin-left:42px;
+}
+
+.hotkey {
+  display:inline-block;
+  width:32px;
+  height:32px;
+  border:2px solid white;
+  border-radius:5px;
+  margin:2px;
+}
+
+.hotkey p {
+  margin:0;
+  padding:6px;
+  text-align:center;
+  font-size:19px;
+}
+
+.disabledhk {
+  background-color:rgba(0, 0, 0, 0.5);
+  opacity:0.25;
+}
+
+.activehk:hover {
+  background-color:white;
+  color:#ed5c48;
+}
+
+#hotkeyDescription {
+  width:280px;
+  height:40px;
+  margin-left:10px;
+}
+
+#hotkeyDescriptionEdit {
+  text-align: center;
+  font-size:13px;
+}
+
+#arrowkeys {
+  position:absolute;
+  bottom:0px;
+  right:0px;
+  width:128px;
+  height:85px;
+}
+
+#hk-up {
+  margin:0px 42px 2px 42px;
+  padding:
+}
+
+#volumeContainer {
+  display:inline-block;
+  height:45px;
+  width:82px;
+  background-color:#ff627a;
+  vertical-align: top;
+}
+
+#soundicon {
+  display:inline-block;
+  height:45px;
+  width:35px;
+  background-image: url(assets/trajectory/soundiconbig.png);
+  vertical-align: top;
+}
+
+#volumeLevel {
+  display:inline-block;
+  height:45px;
+  width:22px;
+  vertical-align: top;
+  position:relative;
+}
+
+#volumeLevel p {
+  text-align:left;
+  font-size:30px;
+  padding:7px 5px 5px 2px;
+  margin:0;
+}
+
+#volumeButtonContainer {
+  display:inline-block;
+  width:25px;
+  height:45px;
+  vertical-align: top;
+  background-color:#f7829b;
+  position: relative;
+}
+
+.volumeButton {
+  height:22px;
+  width:25px;
+  cursor:pointer;
+}
+
+.volumeButton p {
+  font-size:25px;
+  padding:5px;
+  text-align: center;
+  margin:0;
+  position:relative;
+  bottom:8px;
+}
+
+.volumeButton:hover {
+  background-color:rgba(255, 255, 255, 0.18);
 }
 
 #donatebutton {
@@ -229,11 +416,12 @@ textarea {
 }
 
 .donatebuttondefault {
-  background-color:#52d750;
+  /*background-color:#52d750;*/
+  background-color:#43c849;
 }
 
 .donatebuttonhighlight {
-  background-color:#7aee78;
+  background-color:#55df5b;
 }
 
 #dollarbox {
@@ -252,30 +440,26 @@ textarea {
 }
 
 #versionButtonContainer {
-  width:200px;
+  width:140px;
   height:45px;
   display:inline-block;
-  background-color:#FFCA8F;
-  padding-right:30px;
+  background-color:#d89aeb;
 }
 
 .verButton {
   width:70px;
-  height:30px;
-  background-color:#Df9440;
+  height:45px;
+  background-color:#c151fc;
   cursor:pointer;
   display:inline-block;
   color:#FFFFFF;
-  opacity:0.4;
-  border-radius:5px;
+  opacity:0.3;
   text-align:center;
-  margin-top:7px;
-
-  margin-left:30px;
 }
 
 .verButton p {
-  margin:4px 0;
+  margin:0;
+  padding:12px 0px;
   font-size:23px;
 }
 
@@ -323,6 +507,7 @@ textarea {
   background-color:#497cff;
   text-align:center;
   display:inline-block;
+  font-weight: bold;
 }
 
 #attackertitle p {
@@ -333,10 +518,11 @@ textarea {
 #stagetitle {
   width:40px;
   height:100px;
-  background-color:#3bd941;
+  background-color:#43c849;
   display:inline-block;
   vertical-align:top;
   display:inline-block;
+  font-weight: bold;
 }
 
 #stagetitle p {
@@ -352,6 +538,7 @@ textarea {
   text-align:center;
   vertical-align:top;
   display:inline-block;
+  font-weight: bold;
 }
 
 #victimtitle p {
@@ -365,6 +552,7 @@ textarea {
   background-color:#b961ff;
   vertical-align:top;
   display:inline-block;
+  font-weight: bold;
 }
 
 #savetitle p {
@@ -435,7 +623,7 @@ textarea {
 #trajCanvas {
 	width:4580px;
 	height:3188px;
-	position:absolute;
+	position:fixed;
 }
 
 .labelBox {
@@ -648,28 +836,32 @@ textarea
   width:90px;
   height:30px;
   position:absolute;
-  bottom:0px;
-  left:10px;
+  bottom:5px;
+  left:15px;
   z-index:1;
-  opacity:0.3;
+  opacity:0.6;
+  background-color:black;
   margin:5px;
+  padding:5px;
+  border-radius: 5px;
 }
 
 #groundedBox p {
   text-align:center;
   font-size:20px;
-  margin:0;
+  margin:3px 0 0 0;
 }
 
 #mousePosition {
-  width:165px;
+  width:175px;
   height:30px;
-	position:absolute;
-	bottom:0px;
-	right:100px;
+	position:fixed;
+	bottom:145px;
+	right:220px;
   background-color:rgba(0, 0, 0, 0.5);
-  z-index:28;
+  z-index:27;
   border-radius:5px;
+  display:block;
 }
 
 #mousePosition p {
@@ -679,7 +871,7 @@ textarea
 }
 
 #mPosX, #mPosY {
-  width:60px;
+  width:65px;
   height:20px;
   background-color:rgba(0,0,0,0);
   display:inline-block;
@@ -859,7 +1051,7 @@ textarea
 }
 
 .expandfalse {
-  opacity:0.05;
+  opacity:0.15;
 }
 
 .expandtrue {
@@ -1091,6 +1283,75 @@ textarea
   background-image:url(assets/trajectory/stageicons2/ps.png);
 }
 
+
+#zoomContainer {
+  height:100px;
+  width:90px;
+  background-color:#404040;
+  display:inline-block;
+}
+
+#zoomButtonContainer {
+  height:100px;
+  width:50px;
+  display:inline-block;
+}
+
+.zoomButton {
+  height:50px;
+  width:50px;
+  opacity:0.4;
+  background-color:#575757;
+  cursor: pointer;
+}
+
+.zoomButton:hover {
+  opacity:1;
+}
+
+#zoomPlus {
+  background-image:url(assets/trajectory/zoomplus.png);
+}
+
+#zoomMinus {
+  background-image:url(assets/trajectory/zoomminus.png);
+}
+
+#zoomSliderContainer {
+  height:94px;
+  width:40px;
+  position:relative;
+  display:inline-block;
+  margin:3px 0px;
+}
+
+#zoomSliderBar {
+  height:94px;
+  width:10px;
+  border-radius:5px;
+  background-color: #757373;
+  position:absolute;
+  margin:0px 15px;
+  display:inline-block;
+}
+
+#zoomSliderPointer {
+  height:20px;
+  width:20px;
+  border-radius: 10px;
+  background-color: #cfcfcf;
+  position:absolute;
+  display:inline-block;
+  margin:0px 10px;
+  cursor:pointer;
+  left:0px;
+  top:74px;
+}
+
+#zoomSliderPointer:hover {
+  background-color:#fbfbfb;
+}
+
 #bcontrols {
   width:4580px;
   height:100px;
@@ -1197,7 +1458,7 @@ textarea
 	height:325px;
 	right:140px;
 	top:0px;
-	z-index:100;
+	z-index:122;
 	text-align:center;
 	font-size:14px;
 }
@@ -1640,26 +1901,27 @@ textarea
   margin:0;
   font-size:13px;
 }
-#sdiBox {
+#sdiBox,#zdiBox {
   width:140px;
   height:255px;
   display:inline-block;
   background-color:#363636;
 }
 
-#sdiTitle {
+#sdiTitle,#zdiTitle {
   width:150px;
   height:40px;
   display:inline-block;
   vertical-align:top;
 }
 
-#sdiTitle p {
+#sdiTitle p,#zdiTitle p {
   font-size:30px;
   margin:0px 0px 0px 15px;
+  display:inline-block;
 }
 
-#sdiSelector {
+#sdiSelector, #zdiSelector {
   width:130px;
   height:130px;
   display:inline-block;
@@ -1669,7 +1931,7 @@ textarea
   margin:5px;
 }
 
-#sdiCircle {
+#sdiCircle, #zdiCircle {
   width:130px;
   height:130px;
   background-color:#acacac;
@@ -1677,7 +1939,7 @@ textarea
   border-radius:65px;
 }
 
-#sdiXDeadzone {
+#sdiXDeadzone, #zdiXDeadzone {
   width:36.3px;
   height:130px;
   background-color:rgba(0, 0, 0, 0.2);
@@ -1685,7 +1947,7 @@ textarea
   margin-left:46.85px;
 }
 
-#sdiYDeadzone {
+#sdiYDeadzone, #zdiYDeadzone {
   height:36.3px;
   width:130px;
   background-color:rgba(0, 0, 0, 0.2);
@@ -1694,7 +1956,7 @@ textarea
 }
 
 
-#sdiUserCentre {
+#sdiUserCentre, #zdiUserCentre {
   height:10px;
   width:10px;
   margin-top:61px;
@@ -1704,7 +1966,7 @@ textarea
   background-color:#ff0000;
 }
 
-#sdiUser {
+#sdiUser, #zdiUser {
   height:3px;
   width:130px;
   margin-top:64px;
@@ -1716,14 +1978,14 @@ textarea
   transform: rotate(0deg);
 }
 
-#sdiUTrans {
+#sdiUTrans, #zdiUTrans {
   height:3px;
   width:65px;
   display:inline-block;
   vertical-align:top;
 }
 
-#sdiUSolid {
+#sdiUSolid, #zdiUSolid {
   height:3px;
   width:65px;
   display:inline-block;
@@ -1731,7 +1993,7 @@ textarea
   vertical-align:top;
 }
 
-#sdiVertical {
+#sdiVertical, #zdiVertical {
   width:20px;
   height:130px;
   /*display:inline-block;*/
@@ -1741,7 +2003,7 @@ textarea
 
 }
 
-#sdiButtons {
+#sdiButtons, #zdiButtons {
   width:140px;
   height:20px;
   display:inline-block;
@@ -1749,7 +2011,7 @@ textarea
   vertical-align:top;
 }
 
-#sdiButtonsP {
+#sdiButtonsP, #zdiButtonsP {
   width:140px;
   height:20px;
   display:none;
@@ -1757,24 +2019,43 @@ textarea
   vertical-align:top;
 }
 
-#sdiValues {
+#sdiValues, #zdiValues {
   width:150px;
   height:20px;
   display:inline-block;
   vertical-align:top;
 }
 
-#sdiValues p {
+#sdiValues p, #zdiValues p {
   margin:0;
   font-size:13px;
 }
 
-#sdiAnti {
+#sdiAnti, #zdiAnti {
   background-image:url(assets/trajectory/anti.png);
 }
 
-#sdiClock {
+#sdiClock, #zdiClock {
   background-image:url(assets/trajectory/clock.png);
+}
+
+.sdiNum {
+  display:inline-block;
+  color:black;
+  background-color:white;
+  width:25px;
+  height:25px;
+  border-radius:13px;
+  margin:6px;
+  vertical-align: top;
+}
+
+#sdiNum1 p, #sdiNum2 p {
+  text-align: center;
+  margin:0;
+  font-size:20px;
+  font-weight:bold;
+  padding:1px 6px;
 }
 
 #adiBox {
@@ -1948,6 +2229,52 @@ textarea
 
 .attemptButton:hover{
   background-color:#525252;
+}
+
+#comboSnappingContainer {
+  width:140px;
+  height:55px;
+  display:inline-block;
+  position:relative;
+  text-align:center;
+  vertical-align:top;
+}
+
+#csRealButton {
+  width:140px;
+  height:55px;
+  position:absolute;
+  cursor:pointer;
+}
+
+#csVisual {
+  width:140px;
+  height:55px;
+  position:absolute;
+}
+
+#csText {
+  width:80px;
+  height:55px;
+  background-color:#444444;
+  display:inline-block;
+  vertical-align:top;
+  font-size:15px;
+}
+
+#csText p {
+  margin: 10px 0px;
+}
+
+#csSwitch {
+  width:60px;
+  height:55px;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#csSwitch p {
+  margin:19px 0px;
 }
 
 #crouchingContainer {
@@ -2438,7 +2765,7 @@ textarea
 }
 
 .switchOn {
-  background-color:#33dd3f;
+  background-color:#43c849;
 }
 
 .switchOff {
@@ -2710,7 +3037,7 @@ textarea
   width:100%;
   display:block;
   position:absolute;
-  z-index:31;
+  z-index:122;
 }
 
 #popoutOverlay {
@@ -2719,7 +3046,7 @@ textarea
   display:block;
   background-color:rgba(0, 0, 0, 0.5);
   position:absolute;
-  z-index:30;
+  z-index:121;
 }
 
 #popoutShare {
@@ -2733,6 +3060,114 @@ textarea
   margin-top:-150px;
   margin-left:-200px;
 
+}
+
+#popoutApp {
+  width:100%;
+  height:100%;
+  background-color:#4b4b4b;
+  vertical-align:middle;
+  /*top:15%;
+  left:15%;*/
+  position:absolute;
+  font-family:'Share Tech Mono',Consolas,'Ubuntu Mono','Courier New';
+}
+
+#ppATitle {
+  width:70%;
+  height:50px;
+  display:inline-block;
+}
+
+#ppATitle p {
+  font-size:30px;
+  margin:0;
+  padding:10px;
+}
+
+#ppAMain {
+  height:80%;
+  width:100%;
+  background-color:#343434;
+
+}
+
+#ppAImage {
+  width:50%;
+  height:100%;
+  display:inline-block;
+  position:relative;
+  vertical-align: top;
+}
+
+#ppAImageContainer {
+  width:100%;
+}
+
+#ppAImageSelector {
+  width:68px;
+  height:60px;
+  vertical-align: top;
+  position:relative;
+}
+
+.ppAIS {
+  display:inline-block;
+  border:2px solid white;
+  height:20px;
+  width:20px;
+  border-radius:15px;
+  margin:15px 5px;
+
+}
+
+.ppAISelected {
+  background-color:#b9b9b9;
+}
+
+#ppAImage2 {
+  display:none;
+}
+
+.ppAImage {
+  position:absolute;
+  vertical-align: top;
+}
+
+#ppADetails {
+  width:50%;
+  display:inline-block;
+}
+
+#ppADetails p {
+  margin-left:30px;
+}
+
+#ppASmallText {
+  font-size:12px;
+}
+
+#ppADetailTitle {
+  width:98%;
+  height:80px;
+  background-color:#212121;
+  border-radius:15px;
+  margin-top:10px;
+}
+
+#ppAIcon {
+  height:60px;
+  width:60px;
+  display:inline-block;
+  margin:10px 20px;
+  vertical-align: top;
+}
+
+#ppADetailTitle p {
+  display:inline-block;
+  font-size:20px;
+  margin:40px 0px 0px 10px;
+  vertical-align: top;
 }
 
 #popoutSource {
@@ -2995,6 +3430,7 @@ textarea
   display:inline-block;
   vertical-align:top;
   cursor:pointer;
+  float:right;
 }
 
 .ppSClose {
