--- a/inputmapcreator.css
+++ b/inputmapcreator.css
@@ -8,14 +8,41 @@ body {
 #inputMap {
   display:inline-block;
   vertical-align: top;
+  position:absolute;
+}
+
+#inputMapContainer {
+  width:255px;
+  height:255px;
+  display:inline-block;
+  vertical-align: top;
+}
+
+#darkenInputMap {
+  width:255px;
+  height:255px;
+  display: inline-block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.8);
+  display:none;
+}
+
+#inputMapCover {
+  width:255px;
+  height:255px;
+  display: inline-block;
+  position: absolute;
+}
+
+#inputMap2 {
+  opacity:0;
 }
 
 #output {
   display:inline-block;
   background-color:#292929;
-  width:200px;
-  height:300px;
-  border-radius:15px;
+  width:255px;
+  height:255px;
   margin:0px 30px;
   vertical-align: top;
   font-size:20px;
@@ -25,8 +52,8 @@ body {
 #outputColourBox {
   display:block;
   background-color:#ffffff;
-  width:200px;
-  height:20px;
+  width:70px;
+  height:10px;
   border-radius:15px;
 }
 
@@ -47,6 +74,80 @@ body {
 }
 
 #selectedArea {
-
+  position: absolute;
   display:inline-block;
+}
+
+.pixelInfoBox {
+  position:absolute;
+  width:70px;
+  height:70px;
+  background-color:#333333;
+  border-radius:5px;
+  color:white;
+  font-size:15px;
+}
+
+.pixelInfoBox p {
+  margin:3px 4px;
+}
+
+textarea:hover,
+textarea:active,
+textarea:focus,
+textarea
+{
+    outline:0px !important;
+    -webkit-appearance:none;
+    border:none;
+    font-family:Consolas,"lucida console","Courier New" ;
+}
+
+#variables {
+  width:225px;
+  height:130px;
+  margin:15px 15px;
+}
+
+#rgbContainer {
+  width:225px;
+  height:100px;
+  margin:10px 15px;
+}
+
+#rgbTitle {
+  width:153px;
+  height:20px;
+  display:inline-block;
+  margin:0px 0px 0px 5px;
+  padding:8px 0px;
+}
+
+#customColourViewer {
+  width:64px;
+  height:20px;
+  background-color:white;
+  display:inline-block;
+}
+
+.colourChoice {
+  width:64px;
+  height:35px;
+  display:inline-block;
+  background-color:rgba(0, 0, 0, 0.5);
+  border:none;
+  color:white;
+  text-align:center;
+  resize:none;
+  font-size:27px;
+  vertical-align: top;
+}
+
+.comma {
+  width:10px;
+  height:35px;
+  display:inline-block;
+  margin:0;
+  padding:8px 0px;
+  vertical-align: top;
 }
